# interactive-portfolio

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  sandbox.ipynb
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.streamlit/: config.dev.toml  config.toml
src/interactive_portfolio/: __init__.py  settings.py
src/interactive_portfolio/app/: Home.py  __init__.py  portfolio.py
src/interactive_portfolio/app/pages/: home.py  test_page.py  time_series_plotter.py
src/interactive_portfolio/utils/: __init__.py  projects.py  sandbox.ipynb
src/interactive_portfolio/utils/tda_sandbox/: sandbox.ipynb
tests/: conftest.py  test_smoke.py
