[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interactive-portfolio"
version = "0.0.1"
description = "Personal interactive portfolio and study materials"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "streamlit>=1.33",
  "pandas>=2.2",
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
  "black>=24.0",
  "mypy>=1.6",
  "pre-commit>=3.7",
  "jupyter>=1.0",
  "nbconvert>=7.10",
  "jupytext>=1.16", 
]

[tool.ruff]
line-length = 100
target-version = "py310"
lint.select = ["E","F","I","B","UP"]
lint.ignore = ["E203","E501"]  # let black handle long lines
src = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
