[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interactive-portfolio"
dynamic = ["version"]
description = "Personal interactive portfolio and study materials"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "streamlit==1.48.0",
  "pandas>=2.2",
  "numpy>=1.26",
  "plotly>=5.18",
  "yfinance>=0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
  "black>=24.0",
  "mypy>=1.6",
  "pre-commit>=3.7",
  "jupyter>=1.0",
  "nbconvert>=7.10",
  "jupytext>=1.16", 
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
# Tag format: 1.2.3 or v1.2.3
version_scheme = "semver"
local_scheme = "no-local-version"     # avoid +gHASH in wheels
fallback_version = "v0.0.0"            # used when not in a git repo (e.g., zip)

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E","F","I","B","UP"]
ignore = ["E203","E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
